Add generate button, reset button, footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="buttons">
+        <button class = "generate">Generate squares</button>
+        <button class = "reset">Reset</button>
+    </div>
     <div class="container">
 
     </div>
+    <footer>&copy; Copyright 2026 Alexander Kalchev</footer>
 </body>
 </html>
